--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -6,7 +6,7 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/piomin/sample-spring-microservices.git', credentialsId: 'github-piomin', branch: 'master'
+            git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'habsh', branch: 'master'
         }
 
         stage('Build') {
@@ -19,7 +19,7 @@ node {
 
         stage('Image') {
             dir ('account-service') {
-                def app = docker.build "localhost:5000/account-service:${env.version}"
+                def app = docker.build "account-service:accounts"
                 app.push()
             }
         }
