--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -1,33 +1,46 @@
 
-node {
-
-    withMaven(maven:'maven') {
-
+pipeline {
+    agent any
+    tools {
+        maven 'Maven 3.3.9'
+        jdk 'jdk8'
+    }
+ stages {
         stage('Checkout') {
-            git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'habsh', branch: 'master'
+           steps { 
+				git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'habsh', branch: 'master'
+		   }
         }
 
         stage('Build') {
-            sh 'mvn clean install'
+		steps {
+            bat 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
             print pom.version
             env.version = pom.version
+			}
         }
 
         stage('Image') {
+		steps {
             dir ('account-service') {
                 def app = docker.build "account-service:accounts"
                 app.push()
             }
+			}
         }
 
         stage ('Run') {
-            docker.image("localhost:5000/account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
+		steps {
+            docker.image("account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
+			}
         }
 
         stage ('Final') {
+		steps {
             build job: 'customer-service-pipeline', wait: false
+			}
         }      
 
     }
