--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -2,10 +2,10 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.3.9'
+        maven 'Maven'
         jdk 'jdk8'
-    }
- stages {
+		}
+	stages {
         stage('Checkout') {
            steps { 
 				git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'habsh', branch: 'master'
@@ -15,25 +15,21 @@ pipeline {
         stage('Build') {
 		steps {
             bat 'mvn clean install'
-
-            def pom = readMavenPom file:'pom.xml'
-            print pom.version
-            env.version = pom.version
 			}
         }
 
         stage('Image') {
-		steps {
-            dir ('account-service') {
-                def app = docker.build "account-service:accounts"
-                app.push()
-            }
-			}
+			steps {
+					cd ./account-service 
+					def app = docker build "account-service:accounts"
+					docker push "account-service:accounts"
+					
+				}
         }
 
         stage ('Run') {
 		steps {
-            docker.image("account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
+            docker image run -p 2222:2222 -h account --name account --link discovery
 			}
         }
 
