--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -3,7 +3,7 @@ node {
     withMaven(maven:'maven3.3.9') {
 
         stage('Checkout') {
-            git url: 'https://github.com/habsh/microservice1.git', CredentialsID: 'github', branch: 'master'
+            git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'habsh', branch: 'master'
         }
 
         stage('Build') {
