--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -5,7 +5,6 @@ node {
         stage('Checkout') {
             git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'githubnew', branch: 'master'
         }
-
         stage('Build') {
             sh 'mvn clean install'
 
@@ -13,16 +12,14 @@ node {
             print pom.version
             env.version = pom.version
         }
-
         stage('Image') {
             dir ('account-service') {
-                def app = docker.build "account-service:${env.version}"
+                def app = docker.build 'account-service:${env.version}'
                 app.push()
             }
         }
-
         stage ('Run') {
-            docker.image("account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
+            docker.image('account-service:${env.version}').run('-p 2222:2222 -h account --name account --link discovery')
         }
 
         stage ('Final') {
@@ -32,7 +29,6 @@ node {
     }
 
 	}
-
 /*pipeline {
     agent any
     
@@ -53,4 +49,3 @@ node {
 		}
 	}
 */
-
