--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -14,12 +14,12 @@ node {
         }
         stage('Image') {
             dir ('account-service') {
-                def app = docker.build 'account-service:${env.version}'
+                def app = docker.build "account-service:${env.version}"
                 app.push()
             }
         }
         stage ('Run') {
-            docker.image('account-service:${env.version}').run('-p 2222:2222 -h account --name account --link discovery')
+            docker.image("account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
         }
 
         stage ('Final') {
