--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -15,7 +15,7 @@ node {
         stage('Image') {
             dir ('account-service') {
                 def app = docker.build "habsh/account-service:${env.version}"
-				docker.withRegistry('https://hub.docker.com/v2/', 'dockerhub') {
+				docker.withRegistry('https://hub.docker.com/v2/repositories/habsh/repositories', 'dockerhub') {
 					app.push()
 					}
             }
