--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -22,8 +22,8 @@ node {
         }
         stage ('Run') {
             //docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-			docker.image("habsh/account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
-			//}
+			docker.image("habsh/account-service:${env.version}").run('-p 2222:2222 -h account --name account')
+			//} //--link discovery'
 		}
 
         stage ('Final') {
