--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -27,7 +27,7 @@ node {
 		}
 
         stage ('Final') {
-            build job: 'customer-service-pipeline', wait: false
+           // build job: 'customer-service-pipeline', wait: false
         }      
 
     }
