--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -6,7 +6,8 @@ node {
             git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'newgithub', branch: 'master'
         }
         stage('Build') {
-            sh 'mvn clean install'
+            sh 'cd account-service'
+	    sh 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
             print pom.version
