--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -3,9 +3,10 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'githubnew', branch: 'master'
+            git url: 'https://github.com/habsh/microservice1.git', credentialsId: 'newgithub', branch: 'master'
         }
         stage('Build') {
+	    sh 'cd account-service'
             sh 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
